--- a/index.html
+++ b/index.html
@@ -62,6 +62,61 @@
         <a href="/" class="btn blue">Find Out More</a>
       </div>
     </section>
+    <section class="testimonials">
+      <div class="container">
+        <h2 class="title">Testimonials</h2>
+        <div class="slider">
+          <div class="item">
+            <img src="stars.png" alt="" />
+            <h4 class="title">Lorem ipsum dolor sit amet</h4>
+            <p>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <img src="avatar.png" alt="" />
+            <h4>Name</h4>
+          </div>
+          <div class="item">
+            <img src="stars.png" alt="" />
+            <h4 class="title">Lorem ipsum dolor sit amet</h4>
+            <p>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <img src="avatar.png" alt="" />
+            <h4>Name</h4>
+          </div>
+          <div class="item">
+            <img src="stars.png" alt="" />
+            <h4 class="title">Lorem ipsum dolor sit amet</h4>
+            <p>
+              Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris
+              nisi ut aliquip ex ea commodo consequat.
+            </p>
+            <img src="avatar.png" alt="" />
+            <h4>Name</h4>
+          </div>
+        </div>
+
+        <a href="/" class="btn">View All</a>
+      </div>
+    </section>
+    <section class="freetrial">
+      <picture>
+        <source media="(min-width: 1000px)" srcset="freetrialimg-lg.png" />
+        <source media="(max-width: 500px)" srcset="freetrialimg.png" />
+        <img src="freetrialimg.png" alt="My logo" />
+      </picture>
+      <div class="container">
+        <div class="text">
+          <h2 class="title">
+            Lorem ipsum dolor sit amet, consectetur et dolore magna aliqua.
+          </h2>
+          <a href="/" class="btn white">Request Free Trail</a>
+        </div>
+      </div>
+    </section>
+    <footer></footer>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
