--- a/index.html
+++ b/index.html
@@ -62,6 +62,44 @@
         <a href="/" class="btn blue">Find Out More</a>
       </div>
     </section>
+    <div class="pricing">
+      <picture>
+        <source media="(min-width: 1000px)" srcset="vector-bg-pricing-lg.png" />
+        <source media="(max-width: 500px)" srcset="vector-bg-pricing.png" />
+        <img src="vector-bg-pricing.png" alt="My logo" />
+      </picture>
+      <div class="container">
+        <div class="content">
+          <div class="text">
+            <h4 class="subtitle">Subtitle</h4>
+            <h2 class="title">
+              Lorem ipsum dolor sit amet, consectetur et dolore magna aliqua.
+            </h2>
+            <a class="btn" href="">Find Out More</a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <section class="textimage">
+      <div class="container">
+        <div class="grid">
+          <div class="text">
+            <h4 class="subtitle">Subtitle</h4>
+            <h2 class="title">
+              Lorem ipsum dolor sit amet, consectetur et dolore magna aliqua.
+            </h2>
+            <p class="large">
+              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do
+              eiusmod tempor incididunt ut labore et dolore magna aliqua.
+            </p>
+            <a class="btn" href="">Find Out More</a>
+          </div>
+          <div class="image">
+            <img src="./home-mobile-header.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </section>
     <section class="testimonials">
       <div class="container">
         <h2 class="title">Testimonials</h2>
@@ -116,7 +154,93 @@
         </div>
       </div>
     </section>
-    <footer></footer>
+    <section class="pricing-slider">
+      <div class="container">
+        <div class="slider">
+          <div class="item">
+            <div class="top">
+              <h3 class="title">Basic</h3>
+              <p>Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.</p>
+              <h2>£4.99</h2>
+              <span>per users per month</span>
+              <a href="/" class="btn blue">Get Started</a>
+            </div>
+            <div class="bottom">
+              <h3 class="title">Features</h3>
+              <ul>
+                <li>Feature</li>
+                <li>Feature two</li>
+                <li>Another feature</li>
+                <li>Feature</li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <footer>
+      <div class="container">
+        <div class="footer-menu">
+          <div class="column">
+            <h4 class="title">Features</h4>
+            <ul>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+            </ul>
+          </div>
+          <div class="column">
+            <h4 class="title">Pricing</h4>
+            <ul>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+            </ul>
+          </div>
+          <div class="column">
+            <h4 class="title">About</h4>
+            <ul>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+            </ul>
+          </div>
+          <div class="column">
+            <h4 class="title">Support</h4>
+            <ul>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+              <li><a href="">Link</a></li>
+            </ul>
+          </div>
+        </div>
+        <div class="contact">
+          <h4 class="title">Keep in touch</h4>
+          <div class="social">
+            <a href="/">Facebook</a>
+            <a href="">Insta</a>
+            <a href="">Twitt</a>
+          </div>
+          <div>
+            <input type="text" />
+            <button>subscribe</button>
+          </div>
+        </div>
+        <div class="footer-lower">
+          <div class="left">
+            <p>24 Newton Place, Glasgow, G3 7PY <strong>&copy; 2019 eTrax.</strong></p>
+            <ul class="terms">
+              <li><a href="">Terms</a></li>
+              <li><a href="">Privacy</a></li>
+              <li><a href="">Cookies</a></li>
+            </ul>
+          </div>
+          <div class="right">
+            <img src="voltlogo.png" alt="" />
+          </div>
+        </div>
+      </div>
+    </footer>
     <script type="text/javascript" src="//code.jquery.com/jquery-1.11.0.min.js"></script>
     <script type="text/javascript" src="//code.jquery.com/jquery-migrate-1.2.1.min.js"></script>
     <script type="text/javascript" src="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.min.js"></script>
